--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 	      </div>
 	    </div>
 	  </nav>
-	  <section id="home-section" class="hero">
+	  <!-- <section class="hero">
 		  <div class="home-slider  owl-carousel">
 	      <div class="slider-item ">
 	      	<div class="overlay"></div>
 	        <div class="container">
-	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end bg-gradient" data-scrollax-parent="true">
+	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end bg-gradient">
 	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/ganesh-badhe-uxui.png);">
 	          		<div class="overlay"></div>
 	          	</div>
@@ -72,7 +72,24 @@
 
 	      
 	    </div>
-    </section>
+    </section> -->
+	<section class="hero-banner">
+		<div class="container">
+			<div class="row d-md-flex no-gutters slider-text bg-gradient">
+				<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/ganesh-badhe-uxui.png);">
+					<div class="overlay"></div>
+				</div>
+				<div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+					<div class="text">
+						<span class="subheading">Hello!</span>
+					  <h1 class="mb-4 mt-3">I'm <span>Ganesh Badhe</span></h1>
+					  <h2 class="mb-4">Crafting digital experiences for web and mobile</h2>
+					  <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+				  </div>
+				</div>
+			  </div>
+		  </div>
+  </section>
 
     <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
     	<div class="container">
@@ -146,7 +163,7 @@
 		<div class="heading-section text-center mb-5 ftco-animate pb-5">
 			<h4 class="mb-0" style="color: #999999">Tools I play with</h4>
 			<h2 class="">
-				<strong class="text-slider" style="font-size: 4rem;"></strong>
+				<strong class="text-slider"></strong>
 			</h2>
 			<p class="text-slider-items h5 text-dark" style="top: -15px;position: relative;z-index: 0;">
 				Figma, Adobe XD, Webflow, Wordpress, Photoshop, illustrator, Premiere Pro, After Effects, Visual Studio 
